<resources>
    <string name="app_name">TubalcainTechSurvey</string>
    <string name="text_app_title_1">tubalcain</string>
    <string name="text_app_title_2">tech</string>
    <string name="text_app_title_3">survey</string>
    <string name="boton_comenzar">Comenzar</string>
    <string name="boton_resultados">Resultados</string>
    <string name="boton_anterior">Anterior</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="boton_enviar">Enviar</string>
    <string name="lenguajes">Lenguajes de programacion y scripting</string>
    <string name="lenguajes_conocidos">¿En que lenguajes sabes programar?</string>
    <string name="lenguajes_aprender">¿Que lenguaje te gustaria saber?</string>
    <string name="bd">Bases de datos</string>
    <string name="bases_datos">¿Que bases de datos sabes utilizar?</string>
    <string name="web">Frameworks web</string>
    <string name="frameworks_web">¿Que frameworks web has utilizado alguna vez?</string>
    <string name="ide">IDE/Editores</string>
    <string name="ide_editor">¿Que IDE y editores de codigo utilizas?</string>
    <string name="so">Sistemas operativos</string>
    <string name="sistemas_operativos">¿Que sistema operativo utilizas para desarrollar?</string>
</resources>