<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_title_1"
        style="@style/TextoTitulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_app_title_1"
        app:layout_constraintBottom_toTopOf="@+id/app_title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_title_2"
        style="@style/TextoTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_app_title_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/app_title_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title_3"
        style="@style/TextoTitulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_app_title_3"
        app:layout_constraintStart_toStartOf="@+id/app_title_1"
        app:layout_constraintTop_toBottomOf="@+id/app_title_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/comenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/boton_comenzar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultados" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/boton_resultados"
        app:layout_constraintEnd_toStartOf="@+id/comenzar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/comenzar" />

</androidx.constraintlayout.widget.ConstraintLayout>