<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RealizarEncuestaIDE">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/RealizaEncuestaTituloSeccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ide"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ide_editor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--TODO: Esto puede ser mejorado-->
                <CheckBox
                    android:id="@+id/checkbox_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visual Studio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <CheckBox
                    android:id="@+id/checkbox_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notepad++"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_1" />

                <CheckBox
                    android:id="@+id/checkbox_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eclipse"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_2" />

                <CheckBox
                    android:id="@+id/checkbox_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visual Studio Code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_3" />

                <CheckBox
                    android:id="@+id/checkbox_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sublime Text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_4" />

                <CheckBox
                    android:id="@+id/checkbox_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="IntelliJ"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_5" />

                <CheckBox
                    android:id="@+id/checkbox_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Atom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_6" />

                <CheckBox
                    android:id="@+id/checkbox_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vim"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_7" />

                <CheckBox
                    android:id="@+id/checkbox_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Netbeans"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_8" />

                <CheckBox
                    android:id="@+id/checkbox_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Android Studio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_9" />

                <CheckBox
                    android:id="@+id/checkbox_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Xcode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_10" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_anterior"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/siguiente" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/boton_siguiente"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>