<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.realizar_encuesta.RealizarEncuestaLenguajes">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/textView3"
        style="@style/RealizaEncuestaTituloSeccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lenguajes"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lenguajes_conocidos"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!--TODO: Esto puede ser mejorado-->
                    <CheckBox
                        android:id="@+id/checkbox_conocer_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Java"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Python"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_1" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HTML/CSS"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_2" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="JavaScript"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_3" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PHP"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_4" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="C/C++"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_5" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SQL"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_6" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bash/Shell"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_7" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PowerShell"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_8" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kotlin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_9" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_10" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Go"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_11" />

                    <CheckBox
                        android:id="@+id/checkbox_conocer_13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rust"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_12" />
                    <CheckBox
                        android:id="@+id/checkbox_conocer_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Swift"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox_conocer_13" />

                </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lenguajes_aprender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--TODO: Esto puede ser mejorado-->
            <CheckBox
                android:id="@+id/checkbox_aprender_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/checkbox_aprender_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Python"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_1" />

            <CheckBox
                android:id="@+id/checkbox_aprender_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HTML/CSS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_2" />

            <CheckBox
                android:id="@+id/checkbox_aprender_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="JavaScript"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_3" />

            <CheckBox
                android:id="@+id/checkbox_aprender_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PHP"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_4" />

            <CheckBox
                android:id="@+id/checkbox_aprender_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C/C++"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_5" />

            <CheckBox
                android:id="@+id/checkbox_aprender_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SQL"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_6" />

            <CheckBox
                android:id="@+id/checkbox_aprender_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bash/Shell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_7" />

            <CheckBox
                android:id="@+id/checkbox_aprender_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PowerShell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_8" />

            <CheckBox
                android:id="@+id/checkbox_aprender_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kotlin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_9" />

            <CheckBox
                android:id="@+id/checkbox_aprender_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_10" />

            <CheckBox
                android:id="@+id/checkbox_aprender_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_11" />

            <CheckBox
                android:id="@+id/checkbox_aprender_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rust"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_12" />
            <CheckBox
                android:id="@+id/checkbox_aprender_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Swift"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_aprender_13" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/boton_siguiente"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/card2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>